--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,7 @@
     "8501": {
       "label": "Application",
       "onAutoForward": "openPreview"
+          "server": "streamlit run app.py --server.enableCORS false --server.enableXsrfProtection false"
     }
   },
   "forwardPorts": [
